# gltfu

./: .gitignore  CMakeLists.txt  DEDUPLICATION.md  FLATTEN.md  JOIN.md  PROGRESS_REPORTING.md  PRUNE.md  README.md  SIMPLIFY.md  download_deps.sh  vcpkg.json
src/: gltf_bounds.cpp  gltf_bounds.h  gltf_compress.cpp  gltf_compress.h  gltf_dedup.cpp  gltf_dedup.h  gltf_flatten.cpp  gltf_flatten.h  gltf_info.cpp  gltf_info.h  gltf_join.cpp  gltf_join.h  gltf_merger.cpp  gltf_merger.h  gltf_prune.cpp  gltf_prune.h  gltf_simplify.cpp  gltf_simplify.h  gltf_weld.cpp  gltf_weld.h  main.cpp  math_utils.h  progress_reporter.h  tinygltf_impl.cpp
